[package]
name = "unwind"
version = "0.1.0"
authors = ["Gary Guo <gary@garyguo.net>"]
edition = "2018"

[workspace]
members = ["cdylib", "example"]

[dependencies]
gimli = { version = "0.25.0", default-features = false, features = ["read"] }
libc = { version = "0.2", optional = true }
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex"] }

[features]
alloc = []
fde-phdr = ["libc"]
fde-registry = ["alloc"]
dwarf-expr = []
hide-trace = []
personality = []
personality-dummy = []
print = ["libc"]
panic = ["alloc"]
panic-handler = ["print", "panic"]
panic-handler-dummy = []
system-alloc = []
default = ["dwarf-expr", "hide-trace", "fde-phdr", "fde-registry"]

[profile.dev]
# Must be turned on due to Rust bug https://github.com/rust-lang/rust/issues/50007
lto = true

[profile.release]
lto = true
debug = true
