[package]
name = "unwinding"
version = "0.1.1"
authors = ["Gary Guo <gary@garyguo.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Unwinding library in Rust and for Rust"
repository = "https://github.com/nbdd0121/unwinding/"

[workspace]
members = ["cdylib", "example"]

[dependencies]
gimli = { version = "0.25.0", default-features = false, features = ["read"] }
libc = { version = "0.2", optional = true }
spin = { version = "0.9", optional = true, default-features = false, features = ["mutex", "spin_mutex"] }

[patch.crates-io]
gimli = { git = "https://github.com/gimli-rs/gimli.git", rev = "80010ee0442ecd7d0916b0a36cc2d4267fc09dc8" }

[features]
alloc = []
unwinder = []
fde-phdr = ["libc"]
fde-phdr-dl = ["fde-phdr"]
fde-phdr-aux = ["fde-phdr"]
fde-registry = ["alloc"]
fde-static = []
fde-gnu-eh-frame-hdr = []
dwarf-expr = []
hide-trace = []
personality = []
personality-dummy = []
print = ["libc"]
panicking = []
panic = ["panicking", "alloc"]
panic-handler = ["print", "panic"]
panic-handler-dummy = []
system-alloc = []
default = ["unwinder", "dwarf-expr", "hide-trace", "fde-phdr-dl", "fde-registry"]

[profile.dev]
# Must be turned on for cdylib due to Rust bug https://github.com/rust-lang/rust/issues/50007
lto = true

[profile.release]
lto = true
debug = true

[package.metadata.docs.rs]
features = ["panic-handler"]
